tests/inter/fail/illegal-031.dcf
int x = 0x8000000000000000;

void main() {}